retrieveUnpackaged/objects/copado__Git_Backup__c.object
<CustomObject>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <defaultValue>&quot;master&quot;</defaultValue>
        <inlineHelpText>the branch in the selected git repository. Usually &quot;master&quot;.</inlineHelpText>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Git Backups</relationshipLabel>
        <relationshipName>Git_Backups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Last_Backup__c</fullName>
        <label>Last Backup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Types__c</fullName>
        <inlineHelpText>Empty means all types. Select one or more types to limit the backup only to selected items.</inlineHelpText>
        <label>Metadata Types</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Org__c</fullName>
        <label>Org</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Git_Backups</relationshipLabel>
        <relationshipName>Git_Backups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Git Backup</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Branch__c</columns>
        <columns>copado__Frequency__c</columns>
        <columns>copado__Git_Repository__c</columns>
        <columns>copado__Org__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Git Backup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Backups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>